# dental-hgt

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.json
results/: all_metrics.csv  all_metrics_resnet50.csv  dataset_summary.json  delong_tests.csv  delong_tests_dinov2.csv  delong_tests_resnet50.csv  edge_ablation_resnet50.csv  hgt_ablation_Full_model_resnet50_hist.csv  hgt_ablation_no_antagonist_resnet50_hist.csv  hgt_ablation_no_bilateral_resnet50_hist.csv  hgt_ablation_no_member_of_resnet50_hist.csv  hgt_ablation_no_mesial_distal_resnet50_hist.csv  hgt_ablation_no_part_of_resnet50_hist.csv  hgt_training_history.csv
src/: analysis.py  backbone.py  baselines.py  config.py  data_io.py  edge_ablation.py  evaluate.py  figures.py  graph_build.py  hgt_model.py  preprocess.py  run_pipeline.py  train_hgt.py
tests/: test_data_integrity.py
