[project]
name = "dental-hgt"
version = "0.1.0"
description = "Heterogeneous Graph Transformer for Pathology Detection in Panoramic Dental X-Rays"
requires-python = ">=3.10"
authors = [{name = "Mahir Yusuf Açan"}]

dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "torch-geometric",
    "huggingface_hub>=0.20",
    "Pillow>=10.0",
    "opencv-python>=4.8",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pycocotools>=2.0",
]

[project.optional-dependencies]
yolo = ["ultralytics>=8.0"]
dinov2 = []  # loaded via torch.hub, no extra install needed
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
